--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
 
     <footer>
       <div class="container">
-        <div class="row"></div>
+        <div class="row">
+          <p>Diseñado por <a href="www.remoltech.com">remolTech</p>
+        </div>
       </div>
     </footer>
 
